# Energy-Consumption-Forecasting

./: .gitignore  Dockerfile  README.md  create_dataset.py  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  train.py  xgb_model.pkl
dags/: energy_forecast_dag.py
dashboard/: app.py
data/: energy_data.csv  sample_batch.csv
src/api/: main.py
src/features/: feature_engineering.py
src/models/: sarima_pyfunc.py  train_sarima.py  train_xgb.py
src/pipelines/: train_pipelines.py
src/utils/: metrics.py  model_registry.py
