[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecasting"
version = "0.1.0"
description = "Energy Consumption Forecasting with SARIMA, XGBoost, Airflow, MLflow, FastAPI"
authors = [{name = "Shivani Yadav"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "xgboost",
    "statsmodels",
    "streamlit",
    "mlflow",
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
